<resources>
    <string name="app_name">FireSystem</string>
    <string name="image_view">Image View</string>
    <string name="run_model">Running the model...</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_classification">Classification</string>
    <string name="menu_history">History</string>
    <string name="menu_account">Account</string>
    <string name="menu_profile">My Profile</string>
    <string name="menu_changePass">Change Password</string>
    <string name="menu_login">Login</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_info">Info</string>
    <string name="menu_csv">CSV</string>
    <string name="menu_alluser">Admin</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>