<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_admin"
            android:icon="@drawable/admin"
            android:title="@string/menu_alluser" />
        <item
            android:id="@+id/nav_classification"
            android:icon="@drawable/ic_menu_classification"
            android:title="@string/menu_classification" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_history"
            android:title="@string/menu_history" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_account"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_changePass"
            android:icon="@drawable/ic_change_pass"
            android:title="@string/menu_changePass" />


    </group>

    <item
        android:id="@+id/nav_login"
        android:icon="@drawable/ic_login"
        android:title="@string/menu_login" />
    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/ic_logout"
        android:visible="false"
        android:title="@string/menu_logout" />

</menu>